<resources>
    <string name="app_name">QDMSWiki</string>

    <string name="str_loading">Loading…</string>
    <string name="string_loading_data">Loading data…</string>
    <string name="str_search">Search Articles, Documents, Forms...</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Account Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome to QDMS Wiki</string>
    <string name="login_screen_message">Login with your email and password.</string>

    <string name="str_username">Email</string>
    <string name="str_password">Password</string>
    <string name="str_login">login</string>

    //Heading
    <string name="string_heading">Heading</string>
    <string name="string_navigation">Categories</string>
    <string name="string_documents_published">Documents Published</string>
    <string name="string_articles_published">Articles Published</string>
    <string name="string_notifications">Notifications</string>
    <string name="string_settings">My Account</string>
    <string name="string_application_info">Application Info</string>
    <string name="string_bookmarks">Bookmarks</string>


    //Search
    <string name="string_search_hint">Search...</string>

    //fonts
    <string name="string_lato_regular">Lato-Regular.ttf</string>
    <string name="string_lato_semi_bold">Lato-SemiBold.ttf</string>

    //Application info
    <string name="string_application_name">Application Name</string>
    <string name="string_application_version">Application Version</string>
    <string name="string_date">Date</string>
    <string name="string_environment">Environment</string>
    <string name="string_client">Client</string>
    <string name="string_environment_name">Office</string>
    <string name="string_client_name">BSM</string>

    //popup menu
    <string name="string_info">Info</string>
    <string name="string_book_mark">Book Mark</string>
    <string name="string_download">Download</string>

    //Document view
    <string name="string_document_details">Document Details</string>
    <string name="string_document_number">Document Number</string>
    <string name="string_document_name">Document Name</string>
    <string name="string_document_version">Document Version</string>
    <string name="string_location">Location</string>
    <string name="string_published_on">Published on</string>
    <string name="string_approved_by">Approved by</string>
    <string name="string_sites">Sites</string>
    <string name="string_tags">Tags</string>
    <string name="string_no_of_users_viewed">No. of users viewed</string>
    <string name="string_read_by">Read By</string>

    //Article view
    <string name="string_article_details">Article Details</string>

    //No results
    <string name="string_no_recently_found">We did not find any recently viewed files</string>
    <string name="string_no_recommended_found">We did not find any recommended files</string>
    <string name="string_no_documents_found">We did not find any documents</string>
    <string name="string_no_articles_found">We did not find any articles</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="proceedMsg">Are you sure to proceed?</string>
    <string name="skip">Skip</string>
    <string name="start">Got it</string>

    <string name="walkthrough_slide1_title">Dashboard</string>
    <string name="walkthrough_slide1_desc">Information on Recommended/Recently viewed documents along with search functionality.</string>
    <string name="walkthrough_slide2_title">Navigation Menu</string>
    <string name="walkthrough_slide2_desc">Easily navigate to the document/article you want to view.</string>
    <string name="walkthrough_slide3_title">Search</string>
    <string name="walkthrough_slide3_desc">Searching any Category/Document/Article is made easily including combination search.</string>
    <string name="walkthrough_slide4_title">Document View</string>
    <string name="walkthrough_slide4_desc">View of the document with the provision to search any text within it and easily navigate through it.</string>
    <string name="walkthrough_slide5_title">Document Details</string>
    <string name="walkthrough_slide5_desc">Get additional information on the document and saved bookmarks relating to it on a single click.</string>
</resources>
