<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/commonLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <com.mariapps.qdmswiki.custom.CustomTextView
        android:id="@+id/tvHeadingText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:background="@color/white"
        android:text="@string/string_articles_published"
        android:textColor="@color/black"
        android:textSize="@dimen/heading_text_size"
        app:fontface="@string/string_lato_semi_bold" />


    <LinearLayout
        android:id="@+id/dateAndSearchLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/searchRL"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_60dp"
            android:background="@color/grey_300"
            android:paddingStart="@dimen/dimen_12dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_12dp"
            android:paddingBottom="@dimen/dimen_8dp">

            <com.mariapps.qdmswiki.custom.CustomEditText
                android:id="@+id/searchET"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:background="@drawable/drawable_search_edittext_white"
                android:drawableEnd="@drawable/ic_search_grey"
                android:hint="@string/string_search_hint"
                android:paddingStart="@dimen/dimen_8dp"
                android:paddingTop="1dp"
                android:paddingEnd="@dimen/dimen_10dp"
                android:paddingBottom="1dp"
                android:singleLine="true" />

        </RelativeLayout>

    </LinearLayout>

    <com.mariapps.qdmswiki.custom.CustomRecyclerView
        android:id="@+id/rvDocuments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"/>

</LinearLayout>

