<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:id="@+id/mainLL">

            <RelativeLayout
                android:id="@+id/relMainLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <LinearLayout
                    android:gravity="center"
                    android:padding="@dimen/dimen_30dp"
                    android:background="@drawable/ic_search_bg"
                    android:id="@+id/overViewLL"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="vertical">

                    <com.mariapps.qdmswiki.custom.CustomTextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/ter_text_size"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/str_search"/>

                    <com.mariapps.qdmswiki.custom.CustomEditText
                        android:layout_marginTop="@dimen/dimen_15dp"
                        android:id="@+id/searchET"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_centerInParent="true"
                        android:background="@drawable/drawable_curved_editttext_white"
                        android:drawableRight="@drawable/ic_main_search"
                        android:drawablePadding="@dimen/dimen_8dp"
                        android:hint="@string/string_search_hint"
                        android:textColorHint="@color/searchHint"
                        android:paddingStart="@dimen/dimen_10dp"
                        android:paddingTop="1dp"
                        android:paddingEnd="@dimen/dimen_10dp"
                        android:paddingBottom="1dp"
                        android:singleLine="true" />


                </LinearLayout>

                <RelativeLayout
                    android:padding="@dimen/dimen_10dp"
                    android:id="@+id/relLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/overViewLL"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_marginBottom="@dimen/dimen_5dp">

                    <LinearLayout
                        android:id="@+id/linLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/white">

                        <android.support.design.widget.TabLayout
                            android:background="@color/colorPrimary"
                            app:tabGravity="fill"
                            app:tabIndicatorColor="@color/searchType"
                            app:tabSelectedTextColor="@color/searchType"
                            app:tabTextColor="@color/black"
                            app:tabIndicatorHeight="@dimen/dimen_3dp"
                            android:id="@+id/slidingTabs"
                            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:tabMaxWidth="0dp"
                            android:layout_gravity="center"
                            app:tabMode="fixed"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey_200"/>

                        <com.mariapps.qdmswiki.custom.CustomViewPager
                            android:id="@+id/viewPager"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    </LinearLayout>


                </RelativeLayout>

            </RelativeLayout>


</RelativeLayout>