<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/activity_heading"
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:clickable="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:id="@+id/linMainFolder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <com.mariapps.qdmswiki.custom.CustomTextView
                android:layout_gravity="center"
                android:id="@+id/homeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home"
                android:textColor="@color/application_item"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:background="@drawable/ic_arrow_inactive" />

        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <com.mariapps.qdmswiki.custom.CustomTextView
                android:layout_gravity="center"
                android:id="@+id/accountsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Accounts"
                android:textColor="@color/application_item"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:background="@drawable/ic_arrow_inactive" />

        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <com.mariapps.qdmswiki.custom.CustomTextView
                android:layout_gravity="center"
                android:id="@+id/applicationInfoTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Application Info"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_200"/>


   <LinearLayout
       android:layout_marginLeft="@dimen/dimen_16dp"
       android:layout_marginRight="@dimen/dimen_16dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <LinearLayout
           android:weightSum="1"
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen_50dp"
           android:orientation="horizontal">

           <com.mariapps.qdmswiki.custom.CustomTextView
               android:layout_weight="0.50"
               android:layout_gravity="center"
               android:text="@string/string_application_name"
               android:textColor="@color/application_item"
               android:textSize="@dimen/primary_text_size"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

           <com.mariapps.qdmswiki.custom.CustomTextView
               android:layout_weight="0.50"
               android:layout_gravity="center|left"
               android:textSize="@dimen/primary_text_size"
               android:id="@+id/applicationNameTV"
               android:textColor="@color/black"
               android:textStyle="bold"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

       </LinearLayout>

       <View
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="@color/grey_200"/>

       <LinearLayout
           android:weightSum="1"
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen_50dp"
           android:orientation="horizontal">

           <com.mariapps.qdmswiki.custom.CustomTextView
               android:layout_weight="0.50"
               android:layout_gravity="center"
               android:text="@string/string_application_version"
               android:textSize="@dimen/primary_text_size"
               android:textColor="@color/application_item"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

           <com.mariapps.qdmswiki.custom.CustomTextView
               android:layout_weight="0.50"
               android:layout_gravity="center|left"
               android:id="@+id/applicationVersionTV"
               android:textSize="@dimen/primary_text_size"
               android:textColor="@color/black"
               android:textStyle="bold"
               android:textAllCaps="true"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

       </LinearLayout>

       <View
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="@color/grey_200"/>

       <LinearLayout
           android:weightSum="1"
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen_50dp"
           android:orientation="horizontal">

           <com.mariapps.qdmswiki.custom.CustomTextView
               android:layout_weight="0.50"
               android:layout_gravity="center"
               android:text="@string/string_date"
               android:textSize="@dimen/primary_text_size"
               android:textColor="@color/application_item"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

           <com.mariapps.qdmswiki.custom.CustomTextView
               android:layout_weight="0.50"
               android:layout_gravity="center|left"
               android:id="@+id/dateTV"
               android:textSize="@dimen/primary_text_size"
               android:textColor="@color/black"
               android:textStyle="bold"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

       </LinearLayout>

       <View
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="@color/grey_200"/>

       <LinearLayout
           android:weightSum="1"
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen_50dp"
           android:orientation="horizontal">

           <com.mariapps.qdmswiki.custom.CustomTextView
               android:layout_weight="0.50"
               android:layout_gravity="center"
               android:textSize="@dimen/primary_text_size"
               android:text="@string/string_environment"
               android:textColor="@color/application_item"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

           <com.mariapps.qdmswiki.custom.CustomTextView
               android:layout_weight="0.50"
               android:layout_gravity="center|left"
               android:textSize="@dimen/primary_text_size"
               android:id="@+id/environmentTV"
               android:textColor="@color/black"
               android:textStyle="bold"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

       </LinearLayout>

       <View
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="@color/grey_200"/>

       <LinearLayout
           android:weightSum="1"
           android:layout_width="match_parent"
           android:layout_height="@dimen/dimen_50dp"
           android:orientation="horizontal">

           <com.mariapps.qdmswiki.custom.CustomTextView
               android:layout_weight="0.50"
               android:layout_gravity="center"
               android:text="@string/string_client_name"
               android:textSize="@dimen/primary_text_size"
               android:textColor="@color/application_item"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

           <com.mariapps.qdmswiki.custom.CustomTextView
               android:layout_weight="0.50"
               android:layout_gravity="center|left"
               android:textSize="@dimen/primary_text_size"
               android:id="@+id/clientTV"
               android:textColor="@color/black"
               android:textStyle="bold"
               android:textAllCaps="true"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

       </LinearLayout>

       <View
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="@color/grey_200"/>

   </LinearLayout>

</LinearLayout>